fix typo, and also test installing TinyTeX-0 on Ubuntu

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,7 +83,7 @@ for:
   test_script:
     - Rscript "tools/test-basic.R"
     - tar zcf TinyTeX.tgz -C ~/Library TinyTeX
-    - TINYTEX_INSTALLER=TinTeX-0 ./tools-install-bin-unix.sh
+    - TINYTEX_INSTALLER=TinTeX-0 ./tools/install-bin-unix.sh
 
 -
   matrix:
@@ -115,3 +115,4 @@ for:
     - echo "tlmgr install $(cat pkgs-custom.txt | tr '\n' ' ')" >> install.sh
     - tar zcf ../installer-unix.tar.gz install-tl-unx.tar.gz tinytex.profile install.sh
     - cd ..
+    - TINYTEX_INSTALLER=TinTeX-0 ./tools/install-bin-unix.sh
