use xfun::grep_sub() in a few other places

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(xelatex)
 import(stats)
 import(tools)
 import(utils)
+importFrom(xfun,grep_sub)
 importFrom(xfun,is_linux)
 importFrom(xfun,is_macos)
 importFrom(xfun,is_unix)
