add a tlmgr_repo function to query or set CTAN repository

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(tlmgr_conf)
 export(tlmgr_install)
 export(tlmgr_path)
 export(tlmgr_remove)
+export(tlmgr_repo)
 export(tlmgr_search)
 export(tlmgr_update)
 export(uninstall_tinytex)
