import two more functions from xfun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,9 @@ export(xelatex)
 import(stats)
 import(tools)
 import(utils)
+importFrom(xfun,dir_exists)
 importFrom(xfun,grep_sub)
+importFrom(xfun,in_dir)
 importFrom(xfun,is_linux)
 importFrom(xfun,is_macos)
 importFrom(xfun,is_unix)
