--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -95,7 +95,9 @@ jobs:
 
       - name: Test coverage
         if: success() && runner.os == 'Linux' && matrix.config.r == 'release'
-        run: covr::codecov()
+        run: |
+          remotes::install_cran('covr')
+          covr::codecov()
         shell: Rscript {0}
 
       - name: Upload check results
