--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,7 +48,7 @@ jobs:
       - uses: r-lib/actions/setup-tinytex@5f1c134
         env:
           # install full prebuilt version
-          TINYTEX_INSTALLER: TinyTeX-0
+          TINYTEX_INSTALLER: TinyTeX
 
       - name: Query dependencies
         run: |
