Same as 16be9b119894317e5cf7d21e0fb95d9b83becdfe

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -30,8 +30,7 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v1
 
-      # TODO: Use next tag once this commit is in a release
-      - uses: r-lib/actions/setup-tinytex@5f1c134
+      - uses: r-lib/actions/setup-tinytex@v1
         env:
           # install prebuilt base version (infraonly)
           TINYTEX_INSTALLER: TinyTeX-0
