--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 0.30.1
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, PBC", role = "cph"),
-  person("Fernando", "Cagua", role = "ctb"),
+  person("Christophe", "Dervieux", role = "ctb", comment = c(ORCID = "0000-0003-4474-2498")),
   person("Ethan", "Heinzen", role = "ctb"),
+  person("Fernando", "Cagua", role = "ctb"),
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
