pin the CTAN mirror at https://ctan.math.illinois.edu/systems/texlive/tlnet (#293)
this should stabilize TinyTeX for macOS and Linux; I haven't supported the env var CTAN_REPO for Windows yet

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ image:
   - macOS
   - Ubuntu
 
+environment:
+  CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+
 after_test:
   - sh: rm *.Rproj
   - cmd: del *.Rproj
