install the dev version of knitr to fix the kableExtra problem https://github.com/yihui/tinytex/runs/2406634462?check_suite_focus=true

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -57,6 +57,7 @@ jobs:
         run: |
           pak::local_install_dev_deps(upgrade = TRUE)
           pak::pkg_install("rcmdcheck")
+          pak::pkg_install("yihui/knitr")
         shell: Rscript {0}
 
       - name: Session info
