try to build tinytex-latexmk

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
   CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
 
 after_test:
+  - Rscript tools/build-tinytex.R
   - sh: rm *.Rproj
   - cmd: del *.Rproj
 
