copy the tinytex binary to the bin/ directory

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,8 @@ artifacts:
     name: TinyTeX
   - path: installer*
     name: TinyTeX installer
+  - path: bin/tinytex*
+    name: tinytex binary
 
 for:
 -
