compress tinitex.exe inside R via powershell, otherwise appveyor will also try to run powershell on *nix, in which case tinitex.exe won't be found

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,7 @@ environment:
 after_test:
   - Rscript tools/build-tinitex.R
   - sh: rm *.Rproj
-  - ps: Compress-Archive tinitex.exe tinitex.zip
-  - cmd: del *.Rproj tinitex.exe
+  - cmd: del *.Rproj
 
 artifacts:
   - path: tinitex.*
