Add curl to other workflow too

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -35,6 +35,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: |
+            curl,
             yihui/knitr
 
       - name: Find required LateX packages
