--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ deploy:
   tag: daily
   release: TinyTeX daily build
   description: >
-    This release contains the daily build of TinyTeX ($(date -u +"%Y-%m-%dT%H:%M:%SZ")).
+    This release contains the daily build of TinyTeX${CURRENT_DATE}.
     Please see https://github.com/yihui/tinytex-releases for more info.
   provider: GitHub
   auth_token:
@@ -128,6 +128,7 @@ for:
     - R CMD INSTALL .
 
   build_script:
+    - export CURRENT_DATE=" ($(date))"
     - sed -i 's|# finished base|cp $OLDPWD/install-tl-unx.tar.gz tools/; Rscript tools/clean-tlpdb.R; tar zcf TinyTeX-0.tar.gz -C ~ .TinyTeX|' tools/install-unx.sh
     - ./tools/install-unx.sh
     - Rscript "tools/clean-tlpdb.R"
