--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ for:
     - set PATH=%PATH:C:\MinGW\msys\1.0\bin;=%
 
   before_test:
-    - choco install pandoc --version 2.14.0.3
+    - appveyor-retry choco install pandoc --version 2.14.0.3
     - pandoc -v
 
   test_script:
