we probably don't need the dev version of knitr now (although I don't remember why we needed it in the past)

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -35,8 +35,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: |
-            curl,
-            yihui/knitr
+            curl
 
       - name: Find required LateX packages
         run: Rscript tools/test-packages.R
