Missing : in pak specification

--- a/.github/workflows/required-latex-pkgs.yaml
+++ b/.github/workflows/required-latex-pkgs.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any:curl
+          extra-packages: any::curl
 
       - name: Find required LateX packages
         run: Rscript tools/test-packages.R
