Do not run workflows when working on build.yaml in #170

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -7,8 +7,12 @@
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '.github/workflows/build.yaml'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - '.github/workflows/build.yaml'
 
 name: R-CMD-check
 
