Add jobs for building on other OS

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,9 +6,9 @@ on:
 name: Build TinyTeX Bundles
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
-    name: Build TinyTeX-*.zip
+    name: Build Bundles For Windows
 
     env:
       CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
@@ -69,10 +69,132 @@ jobs:
       - name: Build tinitex
         run: Rscript tools/build-tinitex.R
 
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v3
+      - run: dir .
+
+  build-linux:
+    runs-on: ubuntu-latest
+    name: Build Bundles For Linux
+
+    env:
+      CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@v2
+      
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
         with:
-          name: TinyTex-bundles
-          path: |
-            TinyTeX*.zip
-            tinitex.zip
+          pandoc-version: '2.17.1.1' 
+      
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: release
+          use-public-rspm: true
+
+      - name: Install tinytex package and its deps
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: local::.
+
+      - name: Update all packages
+        run: |
+          try(update.packages(ask = FALSE, checkBuilt = TRUE))
+        shell: Rscript {0}
+
+      - name: Build TinyTeX-0.zip
+        run: |
+          sed -i 's|# finished base|cp $OLDPWD/install-tl-unx.tar.gz tools/; Rscript tools/clean-tlpdb.R; tar zcf TinyTeX-0.tar.gz -C ~ .TinyTeX|' tools/install-unx.sh
+          ./tools/install-unx.sh
+
+      - name: Build TinyTeX-1.zip
+        run: |
+          Rscript "tools/clean-tlpdb.R"
+          tar zcf TinyTeX-1.tar.gz -C ~ .TinyTeX
+
+      - name: Build TinyTeX.zip
+        run: |
+          Rscript "tools/test-basic.R"
+          tar zcf TinyTeX.tar.gz -C ~ .TinyTeX
+
+      - name: Export Regex file
+        run: |
+          Rscript "tools/export-regex.R"
+          tar zcf regex.tar.gz regex.json
+
+      - name: Build *nix installer bundle
+        working-directory: tools
+        run: |
+          cp install-base.sh install.sh
+          echo "tlmgr install $(cat pkgs-custom.txt | tr '\n' ' ')" >> install.sh
+          tar zcf ../installer-unix.tar.gz install-tl-unx.tar.gz tinytex.profile install.sh
+
+      - name: Test Installation
+        env:
+          TINYTEX_INSTALLER: TinyTeX-0
+        run: ./tools/install-bin-unix.sh
+
+      - name: Build tinitex
+        run: Rscript tools/build-tinitex.R
+
+      - run: ls --lisa
+
+  build-mac:
+    runs-on: macos-latest
+    name: Build Bundles For macOS
+
+    env:
+      CTAN_REPO: https://ctan.math.illinois.edu/systems/texlive/tlnet
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@v2
+      
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+        with:
+          pandoc-version: '2.17.1.1' 
+      
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: release
+          use-public-rspm: true
+
+      - name: Install tinytex package and its deps
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: local::.
+
+      - name: Update all packages
+        run: |
+          try(update.packages(ask = FALSE, checkBuilt = TRUE))
+        shell: Rscript {0}
+
+      - name: Build TinyTeX-0.zip
+        run: |
+          sed -i '' 's|# finished base|Rscript "${{ github.workspace }}/tools/clean-tlpdb.R"; tar zcf "${{ github.workspace}}/TinyTeX-0.tgz" -C ~/Library TinyTeX|' tools/install-unx.sh
+          ./tools/install-unx.sh
+
+      - name: Build TinyTeX-1.zip
+        run: |
+          Rscript "tools/clean-tlpdb.R"
+          tar zcf TinyTeX-1.tgz -C ~/Library TinyTeX
+
+      - name: Build TinyTeX.zip
+        run: |
+          Rscript "tools/test-basic.R"
+          tar zcf TinyTeX.tgz -C ~/Library TinyTeX
+
+      - name: Test Installation
+        env:
+          TINYTEX_INSTALLER: TinyTeX-0
+        run: ./tools/install-bin-unix.sh
+
+      - name: Build tinitex
+        run: Rscript tools/build-tinitex.R
+
+      - run: ls --lisa
