try using temp folder

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -236,9 +236,13 @@ jobs:
     runs-on: ubuntu-latest
     name: deploy artifacts as Github release
 
+    defaults:
+      run:
+        working-directory: ${{ runner.temp }}
+
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: bundles
-          path: ~/tinytex-bundles
-      - run: ls -lisa ~/tinytex-bundles
+          path: tinytex-bundles
+      - run: ls -lisa tinytex-bundles
