publish as draft first

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -253,6 +253,7 @@ jobs:
         with:
           repository: cderv/tinytex-releases
           token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+          draft: true
           prerelease: true
           name: TinyTeX daily build
           tag_name: daily
