--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ name: Build TinyTeX Bundles
 
 jobs:
   build-windows:
-    if: false()
+    if: ${{ false }}
     runs-on: windows-latest
     name: Build Bundles For Windows
 
@@ -165,7 +165,7 @@ jobs:
           retention-days: 1
 
   build-mac:
-    if: false()
+    if: ${{ false }}
     runs-on: macos-latest
     name: Build Bundles For macOS
 
