--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -250,7 +250,8 @@ jobs:
       - name: Get Date for bundles
         run: echo "CURRENT_DATE=($(date))" >> $GITHUB_ENV
 
-      - name: Create Release
+      - name: Create draft release with new assets
+        id: draft-release
         uses: softprops/action-gh-release@v1
         with:
           repository: cderv/tinytex-releases
@@ -264,4 +265,17 @@ jobs:
           files: ${{ runner.temp }}/tinytex-bundles/*
           fail_on_unmatched_files: true
           generate_release_notes: false
+
+      - name: Publish new release
+        env:
+          GH_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+        run: |
+          # move tag to last commit on master
+          sha=gh api repos/cderv/tinytex-releases/git/ref/heads/master --jq '.object.sha'
+          gh api repos/cderv/tinytex-releases/git/refs/tags/daily -f sha=$sha
+          # delete current release
+          gh -R cderv/tinytex-releases release delete daily -y
+          # undraft new release
+          gh api repos/{owner}/{repo}/releases/${{ steps.draft-release.outputs.id}} -f draft=false -f tag_name='daily'
+
         
